[package]
name = "ldap-reconciler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ldap-reconciler"
path = "src/main.rs"

[dependencies]
ldap-reconciler-lib = { workspace = true }
ldap3 = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
json5 = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tap = { workspace = true }  # For method chaining, reduces superfluous locals
